--- a/index.html
+++ b/index.html
@@ -19,3 +19,20 @@
 		</table>
 
 	</body>
+
+<script>
+
+	function start (){
+
+	}
+
+	function stop(){
+
+	}
+
+	unction reset (){
+
+	}
+
+
+</script>
