--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
 
 	}
 
-	unction reset (){
+	function reset (){
 
 	}
+
+	var timer = new Timer(function () {
+     console.log("Chamou a função!");
+   }, 3000);
 
 
 </script>
