--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 		minutos = 0;
 		segundos = 0;
 		milissegundos = 0;
+		document.getElementById('hora').innerText = '00';
+		document.getElementById('minutos').innerText ='00';
+		document.getElementById('segundos').innerText = '00'; 
 
 	}
 
