--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	
 			<table>
 			<tr>
-			<td><button class="botao" onclick="start()">Start</button></td>
-			<td><button class="botao" onclick="stop()">Stop</button></td>
-			<td><button class="botao" onclick="reset()">Reset</button></td>
+			<td><button class="botao" onclick="iniciar()">Start</button></td>
+			<td><button class="botao" onclick="parar()">Stop</button></td>
+			<td><button class="botao" onclick="zerar()">Reset</button></td>
 			</tr>
 
 			</table>
@@ -41,16 +41,16 @@
 	document.getElementById("minutos");
 	document.getElementById("milissegundos");
 
-	function start (){
-		stop();
-		cron = setInterval(() => {timer(); }, 10);
+	function iniciar (){
+		parar();
+		cron = setInterval(() => {tempo(); }, 10);
 	}
 
-	function stop(){
+	function parar(){
 		clearInterval(cron);
 	}
 
-	function reset (){
+	function zerar (){
 		hora = 0;
 		minutos = 0;
 		segundos = 0;
@@ -58,16 +58,32 @@
 		document.getElementById('hora').innerText = '00';
 		document.getElementById('minutos').innerText ='00';
 		document.getElementById('segundos').innerText = '00'; 
+		document.getElementById('milissegundos').innerText = '000';
 
 	}
 
-	function timer (){
-		 if ((millisegundos += 10) == 1000) {
+	function tempo (){
+		if ((milisegundos += 10) == 1000) {
     milissegundos = 0;
-    second++;
+    segundos++;
+  	}
+  		if (segundos ==60) {
+  	minutos = 0;
+  	hora++;
+  	}
+  	document.getElementById('hora').innerText = returnData(hora);
+  	document.getElementById('minuto').innerText = returnData(minuto);
+  	document.getElementById('segundos').innerText = returnData(segundos);
+  	document.getElementById('milissegundos').innerText = returnData(segundos);
+
   }
-  
+
+  function retunrData(input) {
+  	return input > 10 ? input : `0${input}`
+  }
 
 
 
 </script>
+
+
