--- a/index.html
+++ b/index.html
@@ -1,89 +1,73 @@
-<!DOCTYPE html>
-<html lang ="pr-br">
+<form name="form_main">
+  <div>
+    <span id="hora">00</span>:
+    <span id="minutos">00</span>:
+    <span id="segundos">00</span>:
+    <span id="milissegundos">000</span>
+  </div>
 
-<head>
-	<meta charset="UTF-8">
-	<title>Cronômetro</title>
+  <br />
 
-</head>
-
-	<body bgcolor="#FFA500">
-
-		<div class="Cronômetro">
-			<span id="hora">00</span>:
-			<span id ="minutos">00</span>:
-			<span id ="milissegundos">000</span>
-		</div>
-
-		<div class="botoes">
-	
-			<table>
-			<tr>
-			<td><button class="botao" onclick="iniciar()">Start</button></td>
-			<td><button class="botao" onclick="parar()">Stop</button></td>
-			<td><button class="botao" onclick="zerar()">Reset</button></td>
-			</tr>
-
-			</table>
-		</div>
-
-	</body>
+  <button type="button" name="iniciar">start</button>
+  <button type="button" name="pausar">pause</button>
+  <button type="button" name="reset">reset</button>
+</form>
 
 <script>
 
-	let hora = 0;
-	let minutos = 0;
-	let segundos = 0;
-	let milissegundos = 0;
-	let cron;
 
-	document.getElementById("hora");
-	document.getElementById("minutos");
-	document.getElementById("milissegundos");
+let hora = 0;
+let minutos = 0;
+let segundos = 0;
+let milissegundos = 0;
 
-	function iniciar (){
-		parar();
-		cron = setInterval(() => {tempo(); }, 10);
-	}
+let cronometro;
 
-	function parar(){
-		clearInterval(cron);
-	}
+document.form_main.iniciar.onclick = () => iniciar();
+document.form_main.pausar.onclick = () => pausar();
+document.form_main.reset.onclick = () => reset();
 
-	function zerar (){
-		hora = 0;
-		minutos = 0;
-		segundos = 0;
-		milissegundos = 0;
-		document.getElementById('hora').innerText = '00';
-		document.getElementById('minutos').innerText ='00';
-		document.getElementById('segundos').innerText = '00'; 
-		document.getElementById('milissegundos').innerText = '000';
+function iniciar() {
+  pausar();
+  cronometro = setInterval(() => { tempo(); }, 10);
+}
 
-	}
+function pausar() {
+  clearInterval(cronometro);
+}
 
-	function tempo (){
-		if ((milisegundos += 10) == 1000) {
+function reset() {
+  hora = 0;
+  minutos = 0;
+  segundos = 0;
+  milissegundos = 0;
+  document.getElementById('hora').innerText = '00';
+  document.getElementById('minutos').innerText = '00';
+  document.getElementById('segundos').innerText = '00';
+  document.getElementById('milissegundos').innerText = '000';
+}
+
+function tempo() {
+  if ((milissegundos += 10) == 1000) {
     milissegundos = 0;
     segundos++;
-  	}
-  		if (segundos ==60) {
-  	minutos = 0;
-  	hora++;
-  	}
-  	document.getElementById('hora').innerText = returnData(hora);
-  	document.getElementById('minuto').innerText = returnData(minuto);
-  	document.getElementById('segundos').innerText = returnData(segundos);
-  	document.getElementById('milissegundos').innerText = returnData(segundos);
-
   }
-
-  function retunrData(input) {
-  	return input > 10 ? input : `0${input}`
+  if (segundos == 60) {
+    segundos = 0;
+    minutos++;
   }
+  if (minutos == 60) {
+    minutos = 0;
+    hora++;
+  }
+  document.getElementById('hora').innerText = returnData(hora);
+  document.getElementById('minutos').innerText = returnData(minutos);
+  document.getElementById('segundos').innerText = returnData(segundos);
+  document.getElementById('milissegundos').innerText = returnData(milissegundos);
+}
 
-
+function returnData(input) {
+  return input > 10 ? input : `0${input}`
+}
 
 </script>
-
-
