CSS em andamento.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
+
+<!DOCTYPE html>
+<html lang ="pr-br">
+
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
+  <title>Cronômetro</title>
+
+</head>
+
+<body>
 <form name="form_main">
-  <div>
+  <div class="principal">
     <span id="hora">00</span>:
     <span id="minutos">00</span>:
     <span id="segundos">00</span>:
@@ -12,6 +25,8 @@
   <button type="button" name="pausar">pause</button>
   <button type="button" name="reset">reset</button>
 </form>
+
+</body>
 
 <script>
 
